--- a/green.html
+++ b/green.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <p>Welcome to my first git commit from terminal exercise</p>
+  <body bgcolor="#4cbb17">
+    <p>GREEN</p>
 
     <p><a href="index.html">Home Page</a></p>
     <p><a href="pink.html">Pink Page</a></p>
