green link in green file

--- a/graygreen.html
+++ b/graygreen.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body bgcolor="#FFB6C1">
-    <p>PINK</p>
+  <body bgcolor="#1fcecb">
+    <p>PEACH</p>
 
     <p><a href="index.html">Home Page</a></p>
     <p><a href="pink.html">Pink Page</a></p>
