--- a/green.html
+++ b/green.html
@@ -13,5 +13,6 @@
     <p><a href="pink.html">Pink Page</a></p>
     <p><a href="peach.html">Peach Page</a></p>
     <p><a href="green.html">Green Page</a></p>
+    <p><a href="graygreen.html">Green Page</a></p>
   </body>
 </html>
